--- a/trestle/resources/templates/FedRAMP_control_header_template.yaml
+++ b/trestle/resources/templates/FedRAMP_control_header_template.yaml
@@ -23,7 +23,5 @@ x-trestle-fedramp-props:
       completion-date: date_string
     - alternative: describe alternative
     - not-applicable: provide justification
-  responsible_roles:
+  responsible-roles:
     - id: role-id
-      title: title
-      description: description
