fix: Fire off sonar only on local PRs.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -141,7 +141,7 @@ jobs:
         path: coverage.xml
 
   sonar:
-    if: github.repository == 'IBM/compliance-trestle'
+    if: ${{ github.event.pull_request.base.repo.url == github.event.pull_request.head.repo.url }}
     runs-on: ubuntu-latest
     needs: test
     steps:
