--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -3,9 +3,6 @@
 name: Trestle PR pipeline
 on:
   pull_request:
-    branches:
-      - develop
-      - main
   push:
     branches:
       - develop
@@ -144,7 +141,7 @@ jobs:
         path: coverage.xml
 
   sonar:
-    if: github.repository == 'IBM/compliance-trestle'
+    if: ${{ github.event.pull_request.base.repo.url == github.event.pull_request.head.repo.url }}
     runs-on: ubuntu-latest
     needs: test
     steps:
