--- a/tests/data/tasks/profile-to-osco/output-disable/osco-profile.yaml
+++ b/tests/data/tasks/profile-to-osco/output-disable/osco-profile.yaml
@@ -13,35 +13,5 @@ spec:
   - name: ocp4-file-permissions-kube-controller-manager
     rationale: not determinable from specification
   extends: ocp4-cis-node
-  setValues:
-  - name: ocp4-kubelet-eviction-thresholds-set-soft-memory-available
-    rationale: not determinable from specification
-    value: 500Mi
-  - name: ocp4-kubelet-eviction-thresholds-set-soft-nodefs-available
-    rationale: not determinable from specification
-    value: 10%
-  - name: ocp4-kubelet-eviction-thresholds-set-soft-nodefs-inodesfree
-    rationale: not determinable from specification
-    value: 5%
-  - name: ocp4-kubelet-eviction-thresholds-set-soft-imagefs-available
-    rationale: not determinable from specification
-    value: 15%
-  - name: ocp4-kubelet-eviction-thresholds-set-soft-imagefs-inodesfree
-    rationale: not determinable from specification
-    value: 10%
-  - name: ocp4-kubelet-eviction-thresholds-set-hard-memory-available
-    rationale: not determinable from specification
-    value: 200Mi
-  - name: ocp4-kubelet-eviction-thresholds-set-hard-nodefs-available
-    rationale: not determinable from specification
-    value: 5%
-  - name: ocp4-kubelet-eviction-thresholds-set-hard-nodefs-inodesfree
-    rationale: not determinable from specification
-    value: 4%
-  - name: ocp4-kubelet-eviction-thresholds-set-hard-imagefs-available
-    rationale: not determinable from specification
-    value: 10%
-  - name: ocp4-kubelet-eviction-thresholds-set-hard-imagefs-inodesfree
-    rationale: not determinable from specification
-    value: 5%
+  setValues: []
   title: Tailored Profile
