--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,8 @@
-edit_uri: ""
+edit_uri: ''
 extra:
   analytics:
     property: G-XT3KGMHSY8
     provider: google
-extra_css:
-- css/extra.css
 markdown_extensions:
 - admonition
 - markdown_include.include
