--- a/tests/data/tasks/profile-to-osco/output-set/osco-profile.yaml
+++ b/tests/data/tasks/profile-to-osco/output-set/osco-profile.yaml
@@ -6,14 +6,5 @@ metadata:
 spec:
   description: name
   extends: extends
-  setValues:
-  - name: myco_minimum_password_length
-    rationale: not determinable from specification
-    value: '12'
-  - name: myco_password_reuse_prevention
-    rationale: not determinable from specification
-    value: '24'
-  - name: allowed_service_ids_admins_per_account
-    rationale: not determinable from specification
-    value: '10'
+  setValues: []
   title: Best Practices NIST CONTROLS Profile
