fixes for cidd-script
Signed-off-by: Frank Suits <frankst@au1.ibm.com>

--- a/trestle/resources/templates/FedRAMP_control_header_template.yaml
+++ b/trestle/resources/templates/FedRAMP_control_header_template.yaml
@@ -24,4 +24,4 @@ x-trestle-fedramp-props:
     - alternative: describe alternative
     - not-applicable: provide justification
   responsible-roles:
-    - id: role-id
+    - role-id
