--- a/tests/data/yaml/header_with_metadata.yaml
+++ b/tests/data/yaml/header_with_metadata.yaml
@@ -24,5 +24,5 @@ x-trestle-fedramp-props:
     - alternative: we may find other gizmo
     - not-applicable: actually we do not need this at all
   responsible-roles:
-    - id: admin-unix
-    - id: ux-coder
+    - admin-unix
+    - ux-coder
