feat: Support for SSP writing with jinja templating. (#787)
* chore: Committing to change priorities.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Demonstration of jinja extensions allowing processing of oscal fields.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix:Added example on jinja if tags

Signed-off-by: Chris Butler <chris@thebutlers.me>

* feat: Add Jinja markdown filters

Signed-off-by: Chris Butler <chris@thebutlers.me>

* feat: Adding jinja transform command

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: Lazy stashing.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* feat: updated signatures

Signed-off-by: Chris Butler <chris@thebutlers.me>

* feat: Adding kwarg to allow jinja templates to adjust header level

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: Add ssp io (#938)

Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

* chore: Fix control response

Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

* fix: Corrected mdtags to use kwargs properly

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: Adjust control response

Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

* chore: Remove extra test data

Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

* chore: Fix test name

Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

* chore: Small adjustment

Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

* fix: Working ssp templating

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: adding missing test files.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: Print response for this system

Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

* fix: Minor edits

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: CICD Cleanups (#943)

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: Adjust tables and headers (#944)

Sign

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
 - Trestle command-line interface (CLI):
   - CLI for OSCAL documents: cli.md
   - CLI for authoring governed content: trestle_author.md
+  - CLI for jinja template processing: trestle_author_jinja.md
 - Contributing:
   - Code of Conduct: mkdocs_code_of_conduct.md
   - Contributing overview: contributing/mkdocs_contributing.md
@@ -64,6 +65,7 @@ nav:
           - docs: api_reference/trestle.core.commands.author.docs.md
           - folders: api_reference/trestle.core.commands.author.folders.md
           - headers: api_reference/trestle.core.commands.author.headers.md
+          - jinja: api_reference/trestle.core.commands.author.jinja.md
           - profile: api_reference/trestle.core.commands.author.profile.md
           - ssp: api_reference/trestle.core.commands.author.ssp.md
           - versioning:
@@ -93,6 +95,7 @@ nav:
       - duplicates_validator: api_reference/trestle.core.duplicates_validator.md
       - err: api_reference/trestle.core.err.md
       - generators: api_reference/trestle.core.generators.md
+      - jinja: api_reference/trestle.core.jinja.md
       - markdown:
         - markdown_api: api_reference/trestle.core.markdown.markdown_api.md
         - markdown_const: api_reference/trestle.core.markdown.markdown_const.md
@@ -115,6 +118,7 @@ nav:
       - remote:
         - cache: api_reference/trestle.core.remote.cache.md
       - repository: api_reference/trestle.core.repository.md
+      - ssp_io: api_reference/trestle.core.ssp_io.md
       - trestle_base_model: api_reference/trestle.core.trestle_base_model.md
       - utils: api_reference/trestle.core.utils.md
       - validator: api_reference/trestle.core.validator.md
