--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
         args: [--in-place, --parallel, --recursive, --style, .yapf-config]
         files: "^(trestle|tests|scripts)"
         stages: [commit]
+        additional_dependencies: [toml]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
