--- a/docs/tutorials/task.cis-to-component-definition/demo-cis-to-component-definition.config
+++ b/docs/tutorials/task.cis-to-component-definition/demo-cis-to-component-definition.config
@@ -11,7 +11,7 @@ output-dir = component-definitions/cis
 
 profile-name = OCP4 CIS-benchmark v4
 profile-mnemonic = ocp4-cis-node
-profile-ns = http://ibm.github.io/compliance-trestle/schemas/oscal/ibm-cloud
+profile-ns = https://ibm.github.io/compliance-trestle/schemas/oscal/ibm-cloud
 profile-version = 1.1
 profile-check-version = 0.1.58
 
