fix: cleanup phase I including split of profile_resolver (#991)
* initial cleanup including prof resolver split

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* removed parse_file

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* function to query verbosity

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* cleaned up repository

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* as_list and prof resolver

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* updated mkdocs

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* address pr feedback and more cleanup

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* regen of docs

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

* made log calls private

Signed-off-by: Frank Suits <frankst@au1.ibm.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,6 +118,10 @@ nav:
       - remote:
         - cache: api_reference/trestle.core.remote.cache.md
       - repository: api_reference/trestle.core.repository.md
+      - resolver:
+        - merge: api_reference/trestle.core.resolver.merge.md
+        - modify: api_reference/trestle.core.resolver.modify.md
+        - prune: api_reference/trestle.core.resolver.prune.md
       - ssp_io: api_reference/trestle.core.ssp_io.md
       - trestle_base_model: api_reference/trestle.core.trestle_base_model.md
       - utils: api_reference/trestle.core.utils.md
