fix: updated documentation for trestle

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = compliance-trestle
 version = attr: trestle.__version__
 description = Tools to manage & autogenerate python objects representing the OSCAL layers/models
 author = IBM
-author_email = chris.butler@au1.ibm.com
+author_email = avikas@in.ibm.com
 license = Apache Software License v2
 url = https://ibm.github.io/compliance-trestle
 classifiers =
