--- a/tests/data/tasks/osco/test-osco-result-to-oscal.config
+++ b/tests/data/tasks/osco/test-osco-result-to-oscal.config
@@ -1,4 +1,4 @@
-[task.osco-to-oscal]
+[task.osco-result-to-oscal]
 
 input-dir =  tests/data/tasks/osco/input
 output-dir = tests/data/tasks/osco/output
