--- a/tests/data/tasks/tanium/demo-tanium-result-to-oscal.config
+++ b/tests/data/tasks/tanium/demo-tanium-result-to-oscal.config
@@ -1,4 +1,4 @@
-[task.tanium-to-oscal]
+[task.tanium-result-to-oscal]
 
 input-dir =  tests/data/tasks/tanium/input
 output-dir = tests/data/tasks/tanium/runtime
