Standardize task name and remove extraneous typing.

--- a/tests/data/tasks/xlsx/test-xlsx-to-oscal-cd.config
+++ b/tests/data/tasks/xlsx/test-xlsx-to-oscal-cd.config
@@ -1,4 +1,4 @@
-[task.xlsx-to-oscal-component-definition]
+[task.xlsx-to-oscal-cd]
 
 catalog-file = nist-content/nist.gov/SP800-53/rev4/json/NIST_SP-800-53_rev4_catalog.json
 spread-sheet-file = tests/data/spread-sheet/good.xlsx
