--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,7 +64,7 @@ repos:
             flake8-use-fstring,
             flake8-illegal-import,
             pep8-naming,
-            flake8-bandit,
+            # flake8-bandit,
             dlint  
           ]
         files: "^(trestle)"
