Use "public" URL in test data.

--- a/tests/data/tasks/xlsx/test-xlsx-to-oscal-profile.config
+++ b/tests/data/tasks/xlsx/test-xlsx-to-oscal-profile.config
@@ -1,6 +1,6 @@
 [task.xlsx-to-oscal-profile]
 
-spread-sheet-url = https://github.ibm.com/degenaro/hybrid-cloud-demos/blob/master/spread-sheets/ibm_cloud_best_practices_controls_meta_data_with_goalNameID_NIST_params.xlsx
+spread-sheet-url = https://github.mycorp.com/spread-sheets/best_practices_controls.xlsx
 spread-sheet-file = tests/data/spread-sheet/good.xlsx
 work-sheet-name = example_best_practices_controls
 output-dir = tests/data/tasks/xlsx/output
