--- a/tests/data/yaml/good_simple.yaml
+++ b/tests/data/yaml/good_simple.yaml
@@ -3,4 +3,8 @@ control-origination:
 - Service Provider System Specific
 responsible-roles:
 - Customer
-
+x-trestle-set-params:
+  ac-1_prm_5:
+    profile-values: no meetings
+    values:
+    label: meetings cancelled
