--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ long_description = file: README.md
 python_require= '>=3.7'
 [options]
 packages = find:
-package_data = ['': 'trestle/resources/*.ini']
+package_data = {'': 'trestle/resources/*.ini'}
 include_package_data = True
 
 install_requires =
