--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 [build-system]
 requires = [
     "setuptools >= 35.0.2",
-    "setuptools_scm >= 2.0.0, <3"
+    "setuptools_scm >= 2.0.0"
 ]
 build-backend = "setuptools.build_meta"
 
