--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,12 @@
 [build-system]
 requires = [
     "setuptools >= 35.0.2, < 60.10.0",
-    "setuptools_scm >= 2.0.0, < 3"
+    "wheel",
+    "setuptools_scm >= 2.0.0"
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
 
 [tool.pytest.ini_options]
 minversion = "6.2"
