--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ include = trestle*
 exclude = tests
 
 [options.package_data]
-* = *.ini,*.md
+* = *.ini,*.md,*.jinja
 
 [bdist_wheel]
 universal = 1
