--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # Added to aide with eventual transition away from setup.py
 [build-system]
 requires = [
-    "setuptools >= 35.0.2, < 60.10.0",
+    "setuptools >= 35.0.2",
     "wheel",
     "setuptools_scm >= 2.0.0"
 ]
