--- a/setup.cfg
+++ b/setup.cfg
@@ -38,13 +38,16 @@ install_requires =
     pywin32 >= 1.0;platform_system=='Windows'
     defusedxml
     openpyxl~=3.0
-    Jinja2 >= 3.0.1
+    Jinja2 >= 3.0.1,<3.1.0 #version 3.1+ isnt supported
     cmarkgfm==0.6.* #Update regularly
     orjson
 
 [options.packages.find]
 include = trestle*
 exclude = tests
+
+[options.package_data]
+* = *.ini,*.md,*.jinja,*.drawio,*.json,*.yaml,*.yml
 
 [bdist_wheel]
 universal = 1
