--- a/tests/data/tasks/tanium/demo-tanium-report-to-oscal-ar.config
+++ b/tests/data/tasks/tanium/demo-tanium-report-to-oscal-ar.config
@@ -1,4 +1,4 @@
-[task.tanium-to-oscal]
+[task.tanium-report-to-oscal-ar]
 
 input-dir =  tests/data/tasks/tanium/input
 output-dir = tests/data/tasks/tanium/runtime
